test: add unit tests for editable component style: handle text overflow #27 fix: changes not being saved when edited from editable component

--- a/app/editable/editable.component.scss
+++ b/app/editable/editable.component.scss
@@ -9,6 +9,10 @@
   .spacer {
     display: none;
   }
+
+  form {
+    flex-grow: 1;
+  }
 }
 
 .editable {
@@ -21,9 +25,9 @@
 
 .editable-editor {
   display: none;
-  flex: 1 auto;
   padding: 0;
   margin: 0;
+  width: 100%;
 
   &.mui-textfield > input {
     font-size: inherit;
