--- a/app/task/task.component.scss
+++ b/app/task/task.component.scss
@@ -82,8 +82,12 @@ header {
 }
 
 .title {
+  max-width: 480px - (24px * 5);
+  overflow: hidden;
+  text-overflow: ellipsis;
+
   margin: 0;
-  line-height: 1;
+  line-height: 1.2;
   font-size: inherit;
 
   :host.done & {
